force-app/main/default/objects/Object_Mapping__c/Object_Mapping__c.object-meta.xml
<CustomObject>
    <label>Object Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Object Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Object Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>