force-app/main/default/objects/Object_Mapping__c/fields/Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Filter_Condition__c</fullName>
    <label>Filter Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>