force-app/main/default/objects/Object_Mapping__c/fields/Filter_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>Filter_State_JSON__c</fullName>
    <label>Filter State JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>