force-app/main/default/objects/Object_Mapping__c/fields/Object_Mapping_Layout__c.field-meta.xml
<CustomField>
    <fullName>Object_Mapping_Layout__c</fullName>
    <label>Object Mapping Layout</label>
    <referenceTo>Object_Mapping_Layout__c</referenceTo>
    <relationshipLabel>Object Mappings</relationshipLabel>
    <relationshipName>Object_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>