force-app/main/default/objects/Object_Mapping__c/fields/Object_Mapping_Template__c.field-meta.xml
<CustomField>
    <fullName>Object_Mapping_Template__c</fullName>
    <label>Object Mapping Template</label>
    <referenceTo>Object_Mapping_Template__c</referenceTo>
    <relationshipLabel>Object Mappings</relationshipLabel>
    <relationshipName>Object_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>