force-app/main/default/objects/Object_Mapping__c/fields/Source_Object_Relationship_JSON__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Relationship_JSON__c</fullName>
    <label>Source Object Relationship JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>