force-app/main/default/objects/Object_Mapping__c/fields/Target_Object_Relationship_JSON__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Relationship_JSON__c</fullName>
    <label>Target Object Relationship JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>